--- a/assets/components.css
+++ b/assets/components.css
@@ -1,19 +1,24 @@
-.btn {
-  height: 49px;
-  width: 153px;
+.btn-1 {
+  background-color: #d2acf7;
+  /* height: 49px;
+  width: 153px; */
+  padding: 10px 40px;
   font-size: 1.2em;
+  position: relative;
   text-align: center;
   text-transform: capitalize;
-
-  background-color: #d2acf7;
   border-radius: 5px;
   border: 3px solid #000;
   box-shadow: 1px 1px #66707e, 3px 3px #66707e, 5px 5px #66707e, 7px 7px #66707e,
     9px 9px #66707e;
 }
-
-.btn:hover {
+.btn-1:hover {
+  top: 9px;
+  left: 9px;
   background-color: #b0f494;
-  transform: translateX(10px);
-  transform: translateY(10px);
+  /* transform: translateX(10px);
+  transform: translateY(10px); */
+  box-shadow: inset 0px 0px 0px #66707e, inset 0px 0px 0px #66707e;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-in-out;
 }
